# Vi-Rust

./: .gitmodules  Cargo.toml  README.md  build.rs  config.toml
src/: buffer.rs  cursor.rs  editor.rs  example.toml  lsp_client.rs  main.rs  mode.rs  new_editor.rs  new_window.rs  registers.rs  settings.rs  treesitter.rs  utils.rs  window.rs
src/lsp/: lsp_client.rs  lsp_utils.rs  mod.rs
src/mode/: base.rs  drop_down.rs  info.rs  mod.rs  prompt.rs
src/new_pane/: mod.rs  text_pane.rs
src/pane/: mod.rs  popup.rs  text.rs  text_pane.rs  treesitter.rs
src/widgets/: button.rs  mod.rs  text.rs
