[package]
name = "vi"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
crop = "0.3.0"
toml = "0.7.6"
serde = { version = "1.0.185", features = ["derive"] }
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-c = "0.20.6"

[build-dependencies]
cc = "*"
