[package]
name = "vi"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
crop = "0.3.0"
toml = "0.7.6"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["io-util", "process", "rt", "rt-multi-therad"] }
futures = { version = "0.3.28", features = ["executor"] }
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-c = "0.20.6"
tree-sitter-cpp = "0.20.3"
tree-sitter-python = "0.20.4"
tree-sitter-java = "0.20.0"
tree-sitter-commonlisp = "0.3.1"
tree-sitter-swift = "0.3.6"
tree-sitter-go = "0.20.0"
tree-sitter-bash = "0.20.3"
tree-sitter-javascript = "0.20.1"
tree-sitter-c-sharp = "0.20.0"

[build-dependencies]
cc = "*"
